tests/snapshots/complex_lvalue.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn __muldc3(a: f64, b: f64, c: f64, d: f64) -> num_complex::Complex<f64>;
    fn __divdc3(a: f64, b: f64, c: f64, d: f64) -> num_complex::Complex<f64>;
    fn __mulsc3(a: f32, b: f32, c: f32, d: f32) -> num_complex::Complex<f32>;
    fn __divsc3(a: f32, b: f32, c: f32, d: f32) -> num_complex::Complex<f32>;
}

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn pick(arg0: *mut f64) -> f64 {
    let mut p: *mut f64 = std::ptr::null_mut();
    let mut __retval: f64 = 0.0;
    p = arg0;
    let _v0: *mut f64 = p;
    let _v1: f64 = unsafe { *_v0 };
    let _v2: f64 = 5.0;
    let _v3: f64 = _v1 + _v2;
    let _v4: *mut f64 = p;
    unsafe {
        *_v4 = _v3;
    }
    let _v5: *mut f64 = p;
    let _v6: f64 = unsafe { *_v5 };
    __retval = _v6;
    let _v7: f64 = __retval;
    return _v7;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut z: num_complex::Complex<f64> = num_complex::Complex { re: 0.0, im: 0.0 };
    let mut r: f64 = 0.0;
    let mut i: f64 = 0.0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: num_complex::Complex<f64> = num_complex::Complex { re: 1.0, im: 2.0 };
    z = _v1;
    let _v2: f64 = 7.0;
    z.re = _v2;
    let _v3: f64 = 11.0;
    z.im = _v3;
    let _v4: f64 = pick(std::ptr::addr_of_mut!(z.re));
    r = _v4;
    let _v5: f64 = pick(std::ptr::addr_of_mut!(z.im));
    i = _v5;
    let _v6: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v7: num_complex::Complex<f64> = z;
    let _v8: f64 = _v7.re;
    let _v9: i32 = _v8 as i32;
    let _v10: i32 = unsafe { printf(_v6 as *const i8, _v9) };
    let _v11: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v12: num_complex::Complex<f64> = z;
    let _v13: f64 = _v12.im;
    let _v14: i32 = _v13 as i32;
    let _v15: i32 = unsafe { printf(_v11 as *const i8, _v14) };
    let _v16: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v17: f64 = r;
    let _v18: i32 = _v17 as i32;
    let _v19: i32 = unsafe { printf(_v16 as *const i8, _v18) };
    let _v20: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v21: f64 = i;
    let _v22: i32 = _v21 as i32;
    let _v23: i32 = unsafe { printf(_v20 as *const i8, _v22) };
    let _v24: i32 = 0;
    __retval = _v24;
    let _v25: i32 = __retval;
    std::process::exit(_v25 as i32);
}
