tests/snapshots/computed_goto_ops.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

static mut jump_probe_targets: aligned::Aligned<aligned::A16, [*mut core::ffi::c_void; 3]> = aligned::Aligned([std::ptr::null_mut(); 3]);

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn jump_probe(arg0: i32) -> i32 {
    let mut x: i32 = 0;
    let mut __retval: i32 = 0;
    let mut __state0: i32 = 0;
    '__dispatch0: loop {
        match __state0 {
            0 => {
                x = arg0;
                {
                    let _v0: i32 = x;
                    let _v1: i32 = 0;
                    let _v2: bool = _v0 < _v1;
                    let _v3: bool = if _v2 {
                        let _v4: bool = true;
                        _v4
                    } else {
                        let _v5: i32 = x;
                        let _v6: i32 = 2;
                        let _v7: bool = _v5 > _v6;
                        _v7
                    };
                    if _v3 {
                        let _v8: i32 = -1;
                        __retval = _v8;
                        let _v9: i32 = __retval;
                        return _v9;
                    }
                }
                let _v10: i32 = x;
                let _v11: i64 = _v10 as i64;
                let _v12: *mut core::ffi::c_void = 1usize as *mut core::ffi::c_void;
                __state0 = [1, 2, 3][(_v11 as usize)];
                continue '__dispatch0;
            }
            1 => {
                let _v13: i32 = 10;
                __retval = _v13;
                let _v14: i32 = __retval;
                return _v14;
            }
            2 => {
                let _v15: i32 = 20;
                __retval = _v15;
                let _v16: i32 = __retval;
                return _v16;
            }
            3 => {
                let _v17: i32 = 30;
                __retval = _v17;
                let _v18: i32 = __retval;
                return _v18;
            }
            _ => {
                unreachable!();
            }
        }
    }
}

fn main() {
    let mut __retval: i32 = 0;
    let mut input: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: i32 = 2;
    unsafe { std::ptr::write_volatile(std::ptr::addr_of_mut!(input), _v1) };
    let _v2: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v3: i32 = unsafe { std::ptr::read_volatile(std::ptr::addr_of!(input)) };
    let _v4: i32 = jump_probe(_v3);
    let _v5: i32 = unsafe { printf(_v2 as *const i8, _v4) };
    let _v6: i32 = 0;
    __retval = _v6;
    let _v7: i32 = __retval;
    std::process::exit(_v7 as i32);
}
