tests/snapshots/constant_object_query_ops.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut local: aligned::Aligned<aligned::A16, [i32; 6]> = aligned::Aligned([0; 6]);
    let mut p: *mut i32 = std::ptr::null_mut();
    let mut v: i32 = 0;
    let mut c_literal: i32 = 0;
    let mut c_expr: i32 = 0;
    let mut c_volatile: i32 = 0;
    let mut local_whole: u64 = 0;
    let mut local_remaining: u64 = 0;
    let mut global_whole: u64 = 0;
    let mut unknown: u64 = 0;
    let mut unknown_upper: u64 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: *mut i32 = local.as_mut_ptr() as *mut i32;
    p = _v1;
    let _v2: i32 = 3;
    unsafe { std::ptr::write_volatile(std::ptr::addr_of_mut!(v), _v2) };
    let _v3: i32 = 1;
    c_literal = _v3;
    let _v4: i32 = 1;
    c_expr = _v4;
    let _v5: i32 = 0;
    c_volatile = _v5;
    let _v6: u64 = 24;
    local_whole = _v6;
    let _v7: u64 = 16;
    local_remaining = _v7;
    let _v8: u64 = 16;
    global_whole = _v8;
    let _v9: *mut i32 = p;
    let _v10: *mut core::ffi::c_void = _v9 as *mut core::ffi::c_void;
    let _v11: u64 = u64::MAX;
    unknown = _v11;
    let _v12: *mut i32 = p;
    let _v13: *mut core::ffi::c_void = _v12 as *mut core::ffi::c_void;
    let _v14: u64 = 0;
    unknown_upper = _v14;
    let _v15: *mut i8 = b"%d %d %d %lu %lu %lu %lu %lu\n\0".as_ptr() as *mut i8;
    let _v16: i32 = c_literal;
    let _v17: i32 = c_expr;
    let _v18: i32 = c_volatile;
    let _v19: u64 = local_whole;
    let _v20: u64 = local_remaining;
    let _v21: u64 = global_whole;
    let _v22: u64 = unknown;
    let _v23: u64 = unknown_upper;
    let _v24: i32 = unsafe { printf(_v15 as *const i8, _v16, _v17, _v18, _v19, _v20, _v21, _v22, _v23) };
    let _v25: i32 = 0;
    __retval = _v25;
    let _v26: i32 = __retval;
    std::process::exit(_v26 as i32);
}
