tests/snapshots/ctype_classify_param_unsupported.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn isalpha(_0: i32) -> i32;
    fn printf(_0: *const i8, ...) -> i32;
}

fn classify(arg0: i8) -> i32 {
    let mut c: i8 = 0;
    let mut __retval: i32 = 0;
    c = arg0;
    let _v0: i8 = c;
    let _v1: i32 = _v0 as i32;
    let _v2: i32 = unsafe { isalpha(_v1 as i32) };
    __retval = _v2;
    let _v3: i32 = __retval;
    return _v3;
}

fn main() {
    let mut __retval: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    {
        let _v1: i8 = 65;
        let _v2: i32 = classify(_v1);
        let _v3: bool = _v2 != 0;
        if _v3 {
            let _v4: *mut i8 = b"yes\n\0".as_ptr() as *mut i8;
            let _v5: i32 = unsafe { printf(_v4 as *const i8) };
        } else {
            let _v6: *mut i8 = b"no\n\0".as_ptr() as *mut i8;
            let _v7: i32 = unsafe { printf(_v6 as *const i8) };
        }
    }
    let _v8: i32 = 0;
    __retval = _v8;
    let _v9: i32 = __retval;
    std::process::exit(_v9 as i32);
}
