tests/snapshots/ctype_libc_fixup.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

static mut next_lower_c: i32 = 97;

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
    fn toupper(_0: i32) -> i32;
    fn tolower(_0: i32) -> i32;
}

fn next_lower() -> i32 {
    let mut __retval: i32 = 0;
    let _v0: i32 = unsafe { next_lower_c };
    let _v1: i32 = _v0 + 1;
    unsafe {
        next_lower_c = _v1;
    }
    __retval = _v0;
    let _v2: i32 = __retval;
    return _v2;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut upper: i32 = 0;
    let mut lower: i32 = 0;
    let mut digit: i32 = 0;
    let mut punct: i32 = 0;
    let mut eof: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: i32 = 81;
    upper = _v1;
    let _v2: i32 = 113;
    lower = _v2;
    let _v3: i32 = 53;
    digit = _v3;
    let _v4: i32 = 33;
    punct = _v4;
    let _v5: i32 = -1;
    eof = _v5;
    let _v6: *mut i8 = b"%d %d %d %d %d\n\0".as_ptr() as *mut i8;
    let _v7: i32 = lower;
    let _v8: i32 = unsafe { toupper(_v7 as i32) };
    let _v9: i32 = digit;
    let _v10: i32 = unsafe { toupper(_v9 as i32) };
    let _v11: i32 = punct;
    let _v12: i32 = unsafe { toupper(_v11 as i32) };
    let _v13: i32 = upper;
    let _v14: i32 = unsafe { toupper(_v13 as i32) };
    let _v15: i32 = eof;
    let _v16: i32 = unsafe { toupper(_v15 as i32) };
    let _v17: i32 = unsafe { printf(_v6 as *const i8, _v8, _v10, _v12, _v14, _v16) };
    let _v18: *mut i8 = b"%d %d %d %d %d\n\0".as_ptr() as *mut i8;
    let _v19: i32 = upper;
    let _v20: i32 = unsafe { tolower(_v19 as i32) };
    let _v21: i32 = digit;
    let _v22: i32 = unsafe { tolower(_v21 as i32) };
    let _v23: i32 = punct;
    let _v24: i32 = unsafe { tolower(_v23 as i32) };
    let _v25: i32 = lower;
    let _v26: i32 = unsafe { tolower(_v25 as i32) };
    let _v27: i32 = eof;
    let _v28: i32 = unsafe { tolower(_v27 as i32) };
    let _v29: i32 = unsafe { printf(_v18 as *const i8, _v20, _v22, _v24, _v26, _v28) };
    let _v30: *mut i8 = b"%d %d\n\0".as_ptr() as *mut i8;
    let _v31: i32 = next_lower();
    let _v32: i32 = unsafe { toupper(_v31 as i32) };
    let _v33: i32 = next_lower();
    let _v34: i32 = unsafe { tolower(_v33 as i32) };
    let _v35: i32 = unsafe { printf(_v30 as *const i8, _v32, _v34) };
    let _v36: i32 = 0;
    __retval = _v36;
    let _v37: i32 = __retval;
    std::process::exit(_v37 as i32);
}
