tests/snapshots/deep_ast.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn main() {
    let mut __retval: i32 = 0;
    let _v0: i32 = 0;
    __retval = _v0;
    let _v1: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v2: i32 = 0;
    let _v3: i32 = 1;
    let _v4: i32 = _v2 + _v3;
    let _v5: i32 = 1;
    let _v6: i32 = _v4 + _v5;
    let _v7: i32 = 1;
    let _v8: i32 = _v6 + _v7;
    let _v9: i32 = 1;
    let _v10: i32 = _v8 + _v9;
    let _v11: i32 = 1;
    let _v12: i32 = _v10 + _v11;
    let _v13: i32 = 1;
    let _v14: i32 = _v12 + _v13;
    let _v15: i32 = 1;
    let _v16: i32 = _v14 + _v15;
    let _v17: i32 = 1;
    let _v18: i32 = _v16 + _v17;
    let _v19: i32 = 1;
    let _v20: i32 = _v18 + _v19;
    let _v21: i32 = 1;
    let _v22: i32 = _v20 + _v21;
    let _v23: i32 = 1;
    let _v24: i32 = _v22 + _v23;
    let _v25: i32 = 1;
    let _v26: i32 = _v24 + _v25;
    let _v27: i32 = 1;
    let _v28: i32 = _v26 + _v27;
    let _v29: i32 = 1;
    let _v30: i32 = _v28 + _v29;
    let _v31: i32 = 1;
    let _v32: i32 = _v30 + _v31;
    let _v33: i32 = 1;
    let _v34: i32 = _v32 + _v33;
    let _v35: i32 = 1;
    let _v36: i32 = _v34 + _v35;
    let _v37: i32 = 1;
    let _v38: i32 = _v36 + _v37;
    let _v39: i32 = 1;
    let _v40: i32 = _v38 + _v39;
    let _v41: i32 = 1;
    let _v42: i32 = _v40 + _v41;
    let _v43: i32 = 1;
    let _v44: i32 = _v42 + _v43;
    let _v45: i32 = 1;
    let _v46: i32 = _v44 + _v45;
    let _v47: i32 = 1;
    let _v48: i32 = _v46 + _v47;
    let _v49: i32 = 1;
    let _v50: i32 = _v48 + _v49;
    let _v51: i32 = 1;
    let _v52: i32 = _v50 + _v51;
    let _v53: i32 = 1;
    let _v54: i32 = _v52 + _v53;
    let _v55: i32 = 1;
    let _v56: i32 = _v54 + _v55;
    let _v57: i32 = 1;
    let _v58: i32 = _v56 + _v57;
    let _v59: i32 = 1;
    let _v60: i32 = _v58 + _v59;
    let _v61: i32 = 1;
    let _v62: i32 = _v60 + _v61;
    let _v63: i32 = 1;
    let _v64: i32 = _v62 + _v63;
    let _v65: i32 = 1;
    let _v66: i32 = _v64 + _v65;
    let _v67: i32 = 1;
    let _v68: i32 = _v66 + _v67;
    let _v69: i32 = 1;
    let _v70: i32 = _v68 + _v69;
    let _v71: i32 = 1;
    let _v72: i32 = _v70 + _v71;
    let _v73: i32 = 1;
    let _v74: i32 = _v72 + _v73;
    let _v75: i32 = 1;
    let _v76: i32 = _v74 + _v75;
    let _v77: i32 = 1;
    let _v78: i32 = _v76 + _v77;
    let _v79: i32 = 1;
    let _v80: i32 = _v78 + _v79;
    let _v81: i32 = 1;
    let _v82: i32 = _v80 + _v81;
    let _v83: i32 = 1;
    let _v84: i32 = _v82 + _v83;
    let _v85: i32 = 1;
    let _v86: i32 = _v84 + _v85;
    let _v87: i32 = 1;
    let _v88: i32 = _v86 + _v87;
    let _v89: i32 = 1;
    let _v90: i32 = _v88 + _v89;
    let _v91: i32 = 1;
    let _v92: i32 = _v90 + _v91;
    let _v93: i32 = 1;
    let _v94: i32 = _v92 + _v93;
    let _v95: i32 = 1;
    let _v96: i32 = _v94 + _v95;
    let _v97: i32 = 1;
    let _v98: i32 = _v96 + _v97;
    let _v99: i32 = 1;
    let _v100: i32 = _v98 + _v99;
    let _v101: i32 = 1;
    let _v102: i32 = _v100 + _v101;
    let _v103: i32 = 1;
    let _v104: i32 = _v102 + _v103;
    let _v105: i32 = 1;
    let _v106: i32 = _v104 + _v105;
    let _v107: i32 = 1;
    let _v108: i32 = _v106 + _v107;
    let _v109: i32 = 1;
    let _v110: i32 = _v108 + _v109;
    let _v111: i32 = 1;
    let _v112: i32 = _v110 + _v111;
    let _v113: i32 = 1;
    let _v114: i32 = _v112 + _v113;
    let _v115: i32 = 1;
    let _v116: i32 = _v114 + _v115;
    let _v117: i32 = 1;
    let _v118: i32 = _v116 + _v117;
    let _v119: i32 = 1;
    let _v120: i32 = _v118 + _v119;
    let _v121: i32 = 1;
    let _v122: i32 = _v120 + _v121;
    let _v123: i32 = 1;
    let _v124: i32 = _v122 + _v123;
    let _v125: i32 = 1;
    let _v126: i32 = _v124 + _v125;
    let _v127: i32 = 1;
    let _v128: i32 = _v126 + _v127;
    let _v129: i32 = 1;
    let _v130: i32 = _v128 + _v129;
    let _v131: i32 = 1;
    let _v132: i32 = _v130 + _v131;
    let _v133: i32 = 1;
    let _v134: i32 = _v132 + _v133;
    let _v135: i32 = 1;
    let _v136: i32 = _v134 + _v135;
    let _v137: i32 = 1;
    let _v138: i32 = _v136 + _v137;
    let _v139: i32 = 1;
    let _v140: i32 = _v138 + _v139;
    let _v141: i32 = 1;
    let _v142: i32 = _v140 + _v141;
    let _v143: i32 = 1;
    let _v144: i32 = _v142 + _v143;
    let _v145: i32 = 1;
    let _v146: i32 = _v144 + _v145;
    let _v147: i32 = 1;
    let _v148: i32 = _v146 + _v147;
    let _v149: i32 = 1;
    let _v150: i32 = _v148 + _v149;
    let _v151: i32 = 1;
    let _v152: i32 = _v150 + _v151;
    let _v153: i32 = 1;
    let _v154: i32 = _v152 + _v153;
    let _v155: i32 = 1;
    let _v156: i32 = _v154 + _v155;
    let _v157: i32 = 1;
    let _v158: i32 = _v156 + _v157;
    let _v159: i32 = 1;
    let _v160: i32 = _v158 + _v159;
    let _v161: i32 = 1;
    let _v162: i32 = _v160 + _v161;
    let _v163: i32 = 1;
    let _v164: i32 = _v162 + _v163;
    let _v165: i32 = 1;
    let _v166: i32 = _v164 + _v165;
    let _v167: i32 = 1;
    let _v168: i32 = _v166 + _v167;
    let _v169: i32 = 1;
    let _v170: i32 = _v168 + _v169;
    let _v171: i32 = 1;
    let _v172: i32 = _v170 + _v171;
    let _v173: i32 = 1;
    let _v174: i32 = _v172 + _v173;
    let _v175: i32 = 1;
    let _v176: i32 = _v174 + _v175;
    let _v177: i32 = 1;
    let _v178: i32 = _v176 + _v177;
    let _v179: i32 = 1;
    let _v180: i32 = _v178 + _v179;
    let _v181: i32 = 1;
    let _v182: i32 = _v180 + _v181;
    let _v183: i32 = 1;
    let _v184: i32 = _v182 + _v183;
    let _v185: i32 = 1;
    let _v186: i32 = _v184 + _v185;
    let _v187: i32 = 1;
    let _v188: i32 = _v186 + _v187;
    let _v189: i32 = 1;
    let _v190: i32 = _v188 + _v189;
    let _v191: i32 = 1;
    let _v192: i32 = _v190 + _v191;
    let _v193: i32 = 1;
    let _v194: i32 = _v192 + _v193;
    let _v195: i32 = 1;
    let _v196: i32 = _v194 + _v195;
    let _v197: i32 = 1;
    let _v198: i32 = _v196 + _v197;
    let _v199: i32 = 1;
    let _v200: i32 = _v198 + _v199;
    let _v201: i32 = 1;
    let _v202: i32 = _v200 + _v201;
    let _v203: i32 = 1;
    let _v204: i32 = _v202 + _v203;
    let _v205: i32 = 1;
    let _v206: i32 = _v204 + _v205;
    let _v207: i32 = 1;
    let _v208: i32 = _v206 + _v207;
    let _v209: i32 = 1;
    let _v210: i32 = _v208 + _v209;
    let _v211: i32 = 1;
    let _v212: i32 = _v210 + _v211;
    let _v213: i32 = 1;
    let _v214: i32 = _v212 + _v213;
    let _v215: i32 = 1;
    let _v216: i32 = _v214 + _v215;
    let _v217: i32 = 1;
    let _v218: i32 = _v216 + _v217;
    let _v219: i32 = 1;
    let _v220: i32 = _v218 + _v219;
    let _v221: i32 = 1;
    let _v222: i32 = _v220 + _v221;
    let _v223: i32 = 1;
    let _v224: i32 = _v222 + _v223;
    let _v225: i32 = 1;
    let _v226: i32 = _v224 + _v225;
    let _v227: i32 = 1;
    let _v228: i32 = _v226 + _v227;
    let _v229: i32 = 1;
    let _v230: i32 = _v228 + _v229;
    let _v231: i32 = 1;
    let _v232: i32 = _v230 + _v231;
    let _v233: i32 = 1;
    let _v234: i32 = _v232 + _v233;
    let _v235: i32 = 1;
    let _v236: i32 = _v234 + _v235;
    let _v237: i32 = 1;
    let _v238: i32 = _v236 + _v237;
    let _v239: i32 = 1;
    let _v240: i32 = _v238 + _v239;
    let _v241: i32 = 1;
    let _v242: i32 = _v240 + _v241;
    let _v243: i32 = 1;
    let _v244: i32 = _v242 + _v243;
    let _v245: i32 = 1;
    let _v246: i32 = _v244 + _v245;
    let _v247: i32 = 1;
    let _v248: i32 = _v246 + _v247;
    let _v249: i32 = 1;
    let _v250: i32 = _v248 + _v249;
    let _v251: i32 = 1;
    let _v252: i32 = _v250 + _v251;
    let _v253: i32 = 1;
    let _v254: i32 = _v252 + _v253;
    let _v255: i32 = 1;
    let _v256: i32 = _v254 + _v255;
    let _v257: i32 = 1;
    let _v258: i32 = _v256 + _v257;
    let _v259: i32 = unsafe { printf(_v1 as *const i8, _v258) };
    let _v260: i32 = 0;
    __retval = _v260;
    let _v261: i32 = __retval;
    std::process::exit(_v261 as i32);
}
