tests/snapshots/enum_ptr_signedness.snap
---
source: tests/snapshot.rs
expression: rust
---
#![feature(c_variadic)]
#![allow(dead_code, unused, non_camel_case_types, non_snake_case, non_upper_case_globals, arithmetic_overflow, suspicious_runtime_symbol_definitions, unpredictable_function_pointer_comparisons, unused_comparisons)]

#[repr(C)]
#[allow(non_camel_case_types)]
#[derive(Clone, Copy, PartialEq, Eq, Debug, Hash)]
enum color_t {
    RED = 0,
    GREEN = 1,
    BLUE = 2,
}


#[repr(C)]
#[derive(Clone, Copy)]
struct palette {
    start: *mut color_t,
    top: *mut color_t,
}


unsafe extern "C" {
    fn printf(_0: *const i8, ...) -> i32;
}

fn main() {
    let mut __retval: i32 = 0;
    let mut data: [u32; 3] = [0; 3];
    let mut p: palette = palette { start: std::ptr::null_mut(), top: std::ptr::null_mut() };
    let mut c: aligned::Aligned<aligned::A4, color_t> = aligned::Aligned(color_t::RED);
    let _v0: i32 = 0;
    __retval = _v0;
    data = [0, 1, 2];
    let _v1: *mut u32 = data.as_mut_ptr() as *mut u32;
    p.start = _v1 as *mut color_t;
    let _v2: *mut u32 = data.as_mut_ptr() as *mut u32;
    let _v3: i32 = 3;
    let _v4: *mut u32 = unsafe { _v2.add(3) };
    p.top = _v4 as *mut color_t;
    let _v5: *mut u32 = p.start;
    let _v6: i32 = 1;
    let _v7: *mut u32 = unsafe { _v5.add(1) };
    let _v8: u32 = unsafe { *_v7 };
    *c = unsafe { std::mem::transmute(_v8) };
    let _v9: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v10: u32 = *c as u32;
    let _v11: i32 = _v10 as i32;
    let _v12: i32 = unsafe { printf(_v9 as *const i8, _v11) };
    let _v13: *mut i8 = b"%d\n\0".as_ptr() as *mut i8;
    let _v14: *mut u32 = p.top;
    let _v15: *mut u32 = p.start;
    let _v16: i64 = unsafe { _v14.offset_from(_v15) as i64 };
    let _v17: i32 = _v16 as i32;
    let _v18: i32 = unsafe { printf(_v13 as *const i8, _v17) };
    let _v19: i32 = 0;
    __retval = _v19;
    let _v20: i32 = __retval;
    std::process::exit(_v20 as i32);
}
